--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .fonte {
 
-    background-image: url(/imagens/backgorund.png);
+    background-image: url(https://png.pngtree.com/thumb_back/fh260/back_our/20190623/ourmid/pngtree-black-gold-high-end-atmosphere-business-card-background-image_243091.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     box-sizing: border-box;
